// Prisma schema for File Conversion Service
// MySQL 8.0

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum JobStatus {
  queued
  processing
  done
  failed
  expired
}

enum TargetFormat {
  webp
  pdf
  json
}

model ConversionJob {
  id                 String       @id @default(uuid())
  createdAt          DateTime     @default(now())
  updatedAt          DateTime     @updatedAt
  status             JobStatus    @default(queued)
  sourceFilename     String
  sourceStorageKey   String
  sourceMime         String
  sourceSize         Int
  targetFormat       TargetFormat
  params             Json?
  resultStorageKey   String?
  resultMime         String?
  resultSize         Int?
  errorCode          String?
  errorMessage       String?      @db.VarChar(500)
  accessToken        String
  expiresAt          DateTime

  @@index([expiresAt])
  @@index([status])
  @@index([createdAt])
}
